--- a/social-mulitplication/src/main/resources/application.properties
+++ b/social-mulitplication/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.url=jdbc:h2:file:~/social-multiplication;DB_CLOSE_ON_EXIT=FALS
 spring.jpa.properties.hibernate.show_sql=true
 
 server.port=8080
+
+## RabbitMQ 설정
+multiplication.exchange=multiplication_exchange
+multiplication.solved.key=multiplication.solved
