--- a/gamification/src/main/resources/application.properties
+++ b/gamification/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:h2:file:~/social-multiplication;DB_CLOSE_ON_EXIT=FALSE
+spring.jpa.properties.hibernate.show_sql=true
+
 server.port=8081
 
 ## RabbitMQ 설정
@@ -5,3 +10,6 @@ multiplication.exchange=multiplication_exchange
 multiplication.solved.key=multiplication.solved
 multiplication.queue=gamification_multiplication_queue
 multiplication.anything.routing-key=multiplication.*
+
+## REST 클라이언트 설정
+multiplicationHost=http://localhost:8080
